--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -7,17 +7,20 @@
 
                 <div class="form-image">
                     <%= image_tag @post.image_url, class:"image", size:"400x300"%>
-                    <%= f.file_field :image %>
                 </div>
 
                 <div class="form-group">
                     <label for="name">国・スポット</label>
-                    <input type="string" name="name" value="<%= @post.name %>">
+                    <%= f.text_field @post.name, class:"form-control"%>
                 </div>
 
                 <div class="form-group">
                     <label for="message">本文</label>
-                    <input type="text" name="text" value="<%= @post.name %>">
+                    <%= f.text_field @post.text, class:"form-control"%>
+                </div>
+
+                <div class="form-group">
+                    <%= f.file_field @post.image %>
                 </div>
 
                 <%= f.submit "編集完了", class: "btn btn-primary btn-lg btn-block"%>
